--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <t id="infomation"></t>
         </div>
         <canvas class="canvas" width="900" height="900"></canvas>
-        <script type="text/javascript" src="../../lib/mathematics.lib.js"></script>
+        <script type="text/javascript" src="mathematics.lib.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
